dockerfileは動いたが、candleのセル6がおかしい

--- a/myPM/step2_candle_stride10.ipynb
+++ b/myPM/step2_candle_stride10.ipynb
@@ -350,36 +350,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 17%|█▋        | 751/4415 [02:43<14:02,  4.35it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "span = 60\n",
-    "train_len = 4230    #2018-04-19まで\n",
-    "val_len = 4475      #2019-04-19まで\n",
-    "# dirname = '/Users/ohno/study/images/tmp/'\n",
-    "dirname = './images/tmp/'\n",
+    "# span = 60\n",
+    "# train_len = 4230    #2018-04-19まで\n",
+    "# val_len = 4475      #2019-04-19まで\n",
+    "# # dirname = '/Users/ohno/study/images/tmp/'\n",
+    "# dirname = './images/tmp/'\n",
     "\n",
-    "for i in tqdm(range(4475-span)):\n",
-    "    if not(os.path.exists(dirname)):\n",
-    "        os.makedirs(dirname)\n",
-    "    add_plot = [\n",
-    "        mpf.make_addplot(df[\"SMA5\"][i:i+span], panel=0, color=\"orange\", width=0.8),\n",
-    "        mpf.make_addplot(df[\"SMA25\"][i:i+span], panel=0, color=\"blue\", width=0.8),\n",
-    "        mpf.make_addplot(df[\"RSI\"][i:i+span], panel=0, color=\"red\", width=0.8),\n",
-    "    ]\n",
-    "    mpf.plot(df[i:i+span], type=\"candle\", style=\"classic\", figsize=(4,4), tight_layout=True, axisoff=True, addplot=add_plot, savefig=dict(fname=(dirname+f'{str(datename[i])}~{str(datename[i+span-1])}.png'),dpi=100))\n",
-    "    plt.cla()\n",
-    "    plt.clf()\n",
-    "    plt.close()"
+    "# for i in tqdm(range(4475-span)):\n",
+    "#     if not(os.path.exists(dirname)):\n",
+    "#         os.makedirs(dirname)\n",
+    "#     add_plot = [\n",
+    "#         mpf.make_addplot(df[\"SMA5\"][i:i+span], panel=0, color=\"orange\", width=0.8),\n",
+    "#         mpf.make_addplot(df[\"SMA25\"][i:i+span], panel=0, color=\"blue\", width=0.8),\n",
+    "#         mpf.make_addplot(df[\"RSI\"][i:i+span], panel=0, color=\"red\", width=0.8),\n",
+    "#     ]\n",
+    "#     mpf.plot(df[i:i+span], type=\"candle\", style=\"classic\", figsize=(4,4), tight_layout=True, axisoff=True, addplot=add_plot, savefig=dict(fname=(dirname+f'{str(datename[i])}~{str(datename[i+span-1])}.png'),dpi=100))\n",
+    "#     plt.cla()\n",
+    "#     plt.clf()\n",
+    "#     plt.close()"
    ]
   },
   {
@@ -391,25 +383,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/4901 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4901/4901 [1:31:44<00:00,  1.12s/it] \n"
+      "  1%|          | 25/4901 [00:18<48:44,  1.67it/s]  "
      ]
     }
    ],
    "source": [
     "span = 60\n",
     "seq_len = 30\n",
-    "stride = 3\n",
+    "stride = 10\n",
     "train_len = 4230    #2018-04-19まで\n",
     "val_len = 4475      #2019-04-19まで\n",
     "# dirname = '/Users/ohno/study/images/stride/3/'\n",
-    "dirname = './images/stride/3/'\n",
+    "dirname = f'./images/stride/{stride}/'\n",
     "\n",
     "for i in tqdm(range(df.shape[0]-span)):\n",
     "    foldername = dirname+f'{str(datename[i])}~{str(datename[i+span-1])}/'\n",
