--- a/myPM/step3_stride.ipynb
+++ b/myPM/step3_stride.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -598,13 +598,15 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/Users/ohno/study/create_image/price.csv\", index_col='Date', parse_dates=True)\n",
+    "# df = pd.read_csv(\"/Users/ohno/study/create_image/price.csv\", index_col='Date', parse_dates=True)\n",
+    "df = pd.read_csv(\"./price.csv\", index_col='Date', parse_dates=True)\n",
+    "\n",
     "df[70:100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +640,9 @@
     }
    ],
    "source": [
-    "df1 = pd.read_csv(\"/Users/ohno/study/create_image/price.csv\")\n",
+    "# df1 = pd.read_csv(\"/Users/ohno/study/create_image/price.csv\")\n",
+    "df1 = pd.read_csv(\"./price.csv\")\n",
+    "\n",
     "span = 60\n",
     "datename = df.index.strftime('%Y-%m-%d')\n",
     "print(f'{str(datename[0])}~{str(datename[span+30-1])}')\n",
